2005-06-10  Vlad Seryakov  <seryakov@users.sf.net>

	tests/tclresp.test: updated to reflect parameters change 
	for ns_respond, new -binary flag

2005-06-10  Zoran Vasiljevic  <vasiljevic@users.sf.net>

	* nsd/nswin32.c: Cosmetic changes (reformatted, untabified).
	Added NsRestoreSignals as no-op to make symetrical to Unix counterpart
	and avoid excessive ifdefs for Windows.
	Replaced GNU poll implementation.

	* nsd/unix.c: Cosmetic changes (reformatted, untabified).
	
2005-06-10  Stephen Deasey  <sdeasey@users.sf.net>

	* NEWS: Add latest news and remove news which belongs to other modules.

	* include/Makefile.global.in: Enable Tcl CONST checking.
	* include/nsthread.h:
	* include/nscheck.h: Add support for extra GCC checks. (RFE #1215725)

2005-06-09  Stephen Deasey  <sdeasey@users.sf.net>

	* include/Makefile.global.in: Remove TCL_DEFS which isn't needed
	now that autoheader is used.
	* configure.in: Add call to TEA_TIME_HANDLER for time defs.
	* configure:
	* include/config.h.in: Rebuild configure and config.h.

2005-06-09  Vlad Seryakov  <seryakov@users.sf.net>

	* include/Makefile.global.in: added missing TCL_DEFS
	in CFLAGS

2005-06-08  Vlad Seryakov  <seryakov@users.sf.net>

        * sample-config.tcl: added example of dynamic virtual hosting
       
        * include/ns.h:
	* nsd/tclobjv.c: added Ns_ObjvByteArray function to
        accept binary arrays as input parameters.

	* nsd/tclcmds.c:
	* nsd/tclresp.c: added ns_returnbinary command to be able
	to return possibly binary data to the connection. Currently 
	ns_return family support this from files or open fds only.
        Added -binary flag to ns_respond to return binary data without
        encoding conversion.

2005-06-08  Stephen Deasey  <sdeasey@users.sf.net>

	* Makefile: Make sure derived files don't end up in the tarball.

	* Makefile:
	* NEWS: Add latest news.

2005-06-04  Stephen Deasey  <sdeasey@users.sf.net>

	* configure:
	* configure.in:
	* include/Makefile.global.in: