@@ -1114,6 +1114,7 @@ NS_EXTERN SOCKET Ns_SockListenUdp(char *address, int port);
 NS_EXTERN SOCKET Ns_SockListenRaw(int proto);
 NS_EXTERN SOCKET Ns_SockListenUnix(char *path);
 NS_EXTERN SOCKET Ns_SockBindUdp(struct sockaddr_in *saPtr);
+NS_EXTERN SOCKET Ns_SockBindUnix(char *path);
 
 /*
  * sock.c:
